--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
+    "@openzeppelin/contracts": "^4.8.2",
     "ethers": "^5.7.2",
     "hardhat": "^2.12.7",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@openzeppelin/contracts": "^4.8.2"
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "solc": "^0.8.19"
   }
 }
