--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "zksync-web3": "^0.13.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.8.2"
   }
 }
