--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contracts",
+  "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -11,8 +11,5 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "zksync-web3": "^0.13.1"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.8.2"
   }
 }
