--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "ethers": "^6.1.0"
+    "ethers": "^6.1.0",
+    "zksync-web3": "^0.13.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
